--- a/src/www/static/styles.css
+++ b/src/www/static/styles.css
@@ -1,6 +1,61 @@
-body:not(.open) ul, body:not(.open) #add, #entry:not(.show), #modify:not(.show),
+:root {
+    --blue: #0066ff;
+}
+
+* {
+    font-family: Quicksand;
+}
+
+body:not(.open) ul, body:not(.open) #add, body:not(.open) #search,
+        #entry:not(.show), #modify:not(.show), #add:not(.show),
         body.open #login {
     display: none;
+}
+
+a, a:visited {
+    color: var(--blue);
+    text-decoration: none;
+}
+
+a:hover {
+    color: white;
+    background: var(--blue);
+}
+
+#main {
+    position: absolute;
+    margin-top: 1.8em;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+label, input {
+    display: block;
+}
+
+#masterPassword, label[for='masterPassword'], #search, #server,
+        label[for='server'], #incorrectPassword {
+    line-height: 1.8em;
+    font-size: 1.5em;
+    color: var(--blue);
+    text-align: center;
+}
+
+#server {
+    margin-bottom: 1.5em;
+}
+
+#masterPassword, #server, #search {
+    border: 1px var(--blue) solid;
+    border-radius: 2px;
+    margin-top: 10px;
+    width: 100%;
+}
+
+#incorrectPassword {
+    display: block;
+    margin-top: 0.5em;
+    color: darkred;
 }
 
 #password {
@@ -9,5 +64,75 @@ body:not(.open) ul, body:not(.open) #add, #entry:not(.show), #modify:not(.show),
     left: -10000px;
     width: 1px;
     opacity: 0;
+}
+
+#search {
+    margin-bottom: 1em;
+}
+
+#content {
+    position: relative;
+    overflow: hidden;
+}
+
+#add {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+ul, #add, #entry, #modify {
+    float: left;
+    padding: 0.5em;
+    padding-left: 1em;
+}
+
+ul {
+    list-style: none;
+    text-align: right;
+    border-right: 1px var(--blue) solid;
+    padding-left: 0.5em;
+    min-width: 50px;
+}
+
+ul li {
+    font-size: 1.2em;
+    line-height: 1.5em;
+}
+
+#entry {
+    font-size: 1.1em;
+    line-height: 1.3em;
+    padding-top: 1em;
+}
+
+#entry a {
+    margin-right: 0.5em;
+}
+
+#modify input, #modify label {
+    font-size: 1.2em;
+    line-height: 1.5em;
+}
+
+#modify input {
+    border: 1px var(--blue) solid;
+    border-radius: 2px;
+    margin-bottom: 0.25em;
+    padding: 0 0.5em;
+}
+
+#modify input[type='submit'] {
+    display: inline-block;
+    background: white;
+    padding: 0 0.5em;
+    cursor: pointer;
+    margin-right: 0.5em;
+}
+
+#modify input[type='submit']:hover {
+    background: var(--blue);
+    color: white;
 }
 
